refactor: HTTP 응답을 HttpResponse로 분리